# 7Day-AI-Agents

./: README.md
.devcontainer/: devcontainer.json
aihero/course/: .gitignore  README.md  app.py  day1.ipynb  ingest.py  ingest_chunk.py  logs.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt  search.py  search_agent.py  search_tools.py  test.py
aihero/course/logs/: faq_agent_20260714_082429_a26152.json  faq_agent_20260714_125420_143dcf.json  faq_agent_v2_20260714_125629_42170d.json  faq_agent_v2_20260714_125705_e80159.json  faq_agent_v2_20260714_125720_cd21ab.json  faq_agent_v2_20260714_125807_807451.json  faq_agent_v2_20260714_125837_4fe14c.json  faq_agent_v2_20260714_125902_fe9361.json  faq_agent_v2_20260714_125924_a41231.json  faq_agent_v2_20260714_125944_ec9fe5.json  faq_agent_v2_20260714_130346_423045.json  faq_agent_v2_20260714_130421_fb11ff.json
aihero/project/: README.md  app.py  ingest.py  notebook.ipynb  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
