[project]
name = "course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.5.0",
    "load-dotenv>=0.1.0",
    "minsearch>=0.2.0",
    "openai>=2.44.0",
    "pydantic-ai>=2.7.0",
    "python-frontmatter>=1.3.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
