[project]
name = "course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.5.0",
    "python-dotenv>=0.1.0",
    "minsearch>=0.0.5",
    "openai>=1.108.2",
    "pandas>=3.0.3",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
