[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.5.0",
    "minsearch>=0.2.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0",
    "requests>=2.34.2",
    "streamlit>=1.59.2",
]
